--- a/app.yaml
+++ b/app.yaml
@@ -1,12 +1,13 @@
 application: shoutoutprindle
 version: 1
+runtime: python27
 api_version: 1
-runtime: python
+threadsafe: yes
+
 handlers:
 - url: .*
-  script: main.py
+  script: main.app
 
 builtins:
 - remote_api: on
 - deferred: on
-
